// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders without crashing Home should render correctly 1`] = `
<div>
  <h1
    className="header"
  >
    Stock Prices NASDAQ
    <svg
      className="header-icon"
      fill="none"
      stroke="currentColor"
      strokeWidth={1.5}
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20.25 6.375c0 2.278-3.694 4.125-8.25 4.125S3.75 8.653 3.75 6.375m16.5 0c0-2.278-3.694-4.125-8.25-4.125S3.75 4.097 3.75 6.375m16.5 0v11.25c0 2.278-3.694 4.125-8.25 4.125s-8.25-1.847-8.25-4.125V6.375m16.5 0v3.75m-16.5-3.75v3.75m16.5 0v3.75C20.25 16.153 16.556 18 12 18s-8.25-1.847-8.25-4.125v-3.75m16.5 0c0 2.278-3.694 4.125-8.25 4.125s-8.25-1.847-8.25-4.125"
        strokeLinecap="round"
        strokeLinejoin="round"
      />
    </svg>
  </h1>
  <div
    className="search-bar"
  >
    <input
      onChange={[Function]}
      type="text"
    />
    <svg
      className="search"
      fill="none"
      stroke="currentColor"
      strokeWidth={1.5}
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z"
        strokeLinecap="round"
        strokeLinejoin="round"
      />
    </svg>
  </div>
  <div
    className="loading"
  >
    <img
      alt="logo"
      className="App-logo"
      src="Arrow-break.png"
    />
    <h2>
       Loading ...
    </h2>
  </div>
  <div
    className="data"
  />
</div>
`;

exports[`Renders without crashing should render correctly 1`] = `
<div>
  <h1
    className="header"
  >
    Stock Prices NASDAQ
    <svg
      className="header-icon"
      fill="none"
      stroke="currentColor"
      strokeWidth={1.5}
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20.25 6.375c0 2.278-3.694 4.125-8.25 4.125S3.75 8.653 3.75 6.375m16.5 0c0-2.278-3.694-4.125-8.25-4.125S3.75 4.097 3.75 6.375m16.5 0v11.25c0 2.278-3.694 4.125-8.25 4.125s-8.25-1.847-8.25-4.125V6.375m16.5 0v3.75m-16.5-3.75v3.75m16.5 0v3.75C20.25 16.153 16.556 18 12 18s-8.25-1.847-8.25-4.125v-3.75m16.5 0c0 2.278-3.694 4.125-8.25 4.125s-8.25-1.847-8.25-4.125"
        strokeLinecap="round"
        strokeLinejoin="round"
      />
    </svg>
  </h1>
  <div
    className="search-bar"
  >
    <input
      onChange={[Function]}
      type="text"
    />
    <svg
      className="search"
      fill="none"
      stroke="currentColor"
      strokeWidth={1.5}
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z"
        strokeLinecap="round"
        strokeLinejoin="round"
      />
    </svg>
  </div>
  <div
    className="data"
  />
</div>
`;
